--- a/bootstrap-4.5.2-dist/bootstrap-4.5.2-dist/style.css
+++ b/bootstrap-4.5.2-dist/bootstrap-4.5.2-dist/style.css
@@ -11,6 +11,7 @@ body{
     max-width: 980px;
     width: 90%;
     margin-top: 2.25rem;
+    height: 100%;
     
 }
 .col-bg{
@@ -21,13 +22,10 @@ h1{
    color: rgb(14, 47, 194);
    padding-top: 2em;
    padding-bottom: 2em;
-   text-align: center;
+   text-align: justify;
 }
 .email{
     font-size: 18px;
     background-color: white;
     color: blue;
-}
-.i{
-    
 }
