--- a/bootstrap-4.5.2-dist/bootstrap-4.5.2-dist/style.css
+++ b/bootstrap-4.5.2-dist/bootstrap-4.5.2-dist/style.css
@@ -4,6 +4,7 @@ body{
     padding: 0;
     font-family: sans-serif;
     height: 100%;
+    max-height: fit-content;
 
 }
 
@@ -12,11 +13,11 @@ body{
     width: 90%;
     margin-top: 2.25rem;
 }
-.container-flex{
-    background-color: brown;
-}
 .col-bg{
     text-align: center;
+}
+.container-flex{
+    margin-top: 2rem;
 }
 h1{
    font-size: 4em; 
