--- a/bootstrap-4.5.2-dist/bootstrap-4.5.2-dist/style.css
+++ b/bootstrap-4.5.2-dist/bootstrap-4.5.2-dist/style.css
@@ -1,33 +1,44 @@
-body{
-    font-size: 1.125rem;
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    height: 100%;
-    max-height: fit-content;
-
-}
-
-.container{
-    max-width: 980px;
-    width: 90%;
-    margin-top: 2.25rem;
-}
-.col-bg{
+*{
     text-align: center;
+    padding: 20px 20px 20px;
+    width: 100%;
 }
-.container-flex{
-    margin-top: 2rem;
-}
-h1{
-   font-size: 4em; 
-   color: rgb(14, 47, 194);
-   padding-top: 2em;
-   padding-bottom: 2em;
-   text-align: center;
-}
-.email{
-    font-size: 18px;
-    background-color: white;
+.home{
+    padding: 10px 10px 10px;
+    width: 50%;
+    margin-top: 50%;
     color: blue;
+}
+.grid{
+   padding: 30px
+   margin: 0 auto;
+}
+@media only screen and (min-width: 768px){
+    .home{
+        padding: 20px 20px 20px;
+        width: 50%;
+        margin-top: 50%;
+        color: blue;
+}
+.grid{
+    padding: 10px 10px 10px;
+    margin: 0 auto;
+
+}
+}
+
+
+@media only screen and (min-width: 1000px){
+    .home{
+    
+        width:1000px;
+       color: blue;
+
+        
+.grid{
+    padding: 10px 10px 10px;
+    margin: 0 auto;
+}
+    
+}
 }
