--- a/bootstrap-4.5.2-dist/bootstrap-4.5.2-dist/style.css
+++ b/bootstrap-4.5.2-dist/bootstrap-4.5.2-dist/style.css
@@ -1,30 +1,61 @@
 *{
     text-align: center;
-    padding: 20px 20px 20px;
-    width: 100%;
+    /* padding: 20px 20px 20px; */
+  max-width: 100%;
 }
 .home{
-    padding: 10px 10px 10px;
-    width: 50%;
-    margin-top: 50%;
+    text-align: center;
     color: blue;
+    font-style: normal;
+    margin: 0%;
+    margin-top: 40px;
+    padding-top: 50%;
+
+  
+    
 }
 .grid{
-   padding: 30px
+   padding: 30px;
    margin: 0 auto;
+  
 }
+
+.links{
+    margin-top: 0px;
+    padding: 0px
+}
+.pics{
+    
+    margin-top: 0px;
+    padding: 0px;
+
+}
+
 @media only screen and (min-width: 768px){
     .home{
-        padding: 20px 20px 20px;
-        width: 50%;
+      
+        width: 100%;
         margin-top: 50%;
         color: blue;
 }
+
 .grid{
     padding: 10px 10px 10px;
     margin: 0 auto;
 
 }
+.links{
+    margin-top: 0px;
+    padding: 0px;
+    font-weight: 100;
+    width: 50%;
+}
+.pics{
+    
+    margin-top: 0px;
+    padding: 0px;
+
+    width: 50%;
 }
 
 
@@ -33,12 +64,27 @@
     
         width:1000px;
        color: blue;
+    }
 
         
 .grid{
     padding: 10px 10px 10px;
     margin: 0 auto;
 }
+
+.links{
+    margin-top: 0px;
+    padding: 0px;
+    font-weight: 100;
+    width: 1000px;
+}
+
+.pics{
+    
+    margin-top: 0px;
+    padding: 0px;
+
+    width: 1000px;
     
 }
 }
