--- a/bootstrap-4.5.2-dist/bootstrap-4.5.2-dist/style.css
+++ b/bootstrap-4.5.2-dist/bootstrap-4.5.2-dist/style.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     max-height: 100%;
     padding: 0;
     margin: 0;
@@ -112,4 +112,4 @@ ul li span:nth-child(3){
                 margin: 500px;
             }
 
-}
+} */
